# quake_slay

./: .gitignore  .gitmodules  CMakeLists.txt  QuakeBspViewer.vcxproj  cond_test  cond_test.cc  console_test.py  example  imgui.ini  make.bat  make_metal_test.sh  makeosx.sh  makexc.sh  metal_test.m  minigzip
build_debug/: CMakeCache.txt  cmake_install.cmake
build_debug/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
build_debug/contrib/sdl2/: cmake_install.cmake  cmake_uninstall.cmake  sdl2-config  sdl2.pc
build_debug/contrib/sdl2/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  install_postBuildPhase.makeDebug  uninstall_cmakeRulesBuildPhase.makeMinSizeRel
build_debug/contrib/sdl2/SDL2.xcodeproj/: project.pbxproj
build_debug/contrib/sdl2/include/: SDL_config.h
build_debug/contrib/sdl2/slayengine.build/Debug/SDL2-static.build/: dgph
build_debug/contrib/sdl2/slayengine.build/Debug/SDL2-static.build/Objects-normal/x86_64/: SDL.d  SDL2d.LinkFileList  SDL_RLEaccel.d  SDL_assert.d  SDL_atomic.d  SDL_audio.d  SDL_audiocvt.d  SDL_audiodev.d  SDL_audiotypecvt.d  SDL_blendfillrect.d  SDL_blendline.d  SDL_blendpoint.d  SDL_blit.d  SDL_blit_0.d  SDL_blit_1.d  SDL_blit_A.d  SDL_blit_N.d  SDL_blit_auto.d  SDL_blit_copy.d  SDL_blit_slow.d  SDL_bmp.d  SDL_clipboard.d  SDL_clipboardevents.d  SDL_cocoaclipboard.d  SDL_cocoaevents.d  SDL_cocoakeyboard.d  SDL_cocoamessagebox.d  SDL_cocoametalview.d  SDL_cocoamodes.d  SDL_cocoamodes.dia  SDL_cocoamouse.d  SDL_cocoamousetap.d  SDL_cocoaopengl.d  SDL_cocoaopengles.d  SDL_cocoashape.d  SDL_cocoashape.dia  SDL_cocoavideo.d  SDL_cocoavulkan.d  SDL_cocoawindow.d  SDL_cocoawindow.dia  (+100 more)
build_debug/contrib/sdl2/slayengine.build/Debug/SDL2main.build/: dgph
build_debug/contrib/sdl2/slayengine.build/Debug/SDL2main.build/Objects-normal/x86_64/: SDL2maind.LinkFileList  SDL_dummy_main.d
build_debug/contrib/stb_image/: cmake_install.cmake
build_debug/contrib/stb_image/slayengine.build/Debug/stb_image.build/: dgph
build_debug/contrib/stb_image/slayengine.build/Debug/stb_image.build/Objects-normal/x86_64/: stb_image.LinkFileList  stb_image.d  stb_image.dia
build_debug/contrib/zlib/: CTestTestfile.cmake  cmake_install.cmake  zlib.pc
build_debug/contrib/zlib/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  zlib_postBuildPhase.makeDebug  zlib_postBuildPhase.makeMinSizeRel  zlib_postBuildPhase.makeRelWithDebInfo  zlib_postBuildPhase.makeRelease
build_debug/contrib/zlib/Debug/: libz.1.2.11.dylib
build_debug/contrib/zlib/slayengine.build/Debug/example.build/: dgph
build_debug/contrib/zlib/slayengine.build/Debug/example.build/Objects-normal/x86_64/: example.LinkFileList  example.d
build_debug/contrib/zlib/slayengine.build/Debug/minigzip.build/: dgph
build_debug/contrib/zlib/slayengine.build/Debug/minigzip.build/Objects-normal/x86_64/: minigzip.LinkFileList  minigzip.d
build_debug/contrib/zlib/slayengine.build/Debug/zlib.build/: Script-9B2262E123E44546B421BC08.sh  dgph
build_debug/contrib/zlib/slayengine.build/Debug/zlib.build/Objects-normal/x86_64/: adler32.d  compress.d  crc32.d  gzclose.d  gzread.d  gzwrite.d  inffast.d  uncompr.d  (+1 more)
build_debug/contrib/zlib/slayengine.build/Debug/zlibstatic.build/: dgph
build_debug/contrib/zlib/zlib.xcodeproj/: project.pbxproj
build_debug/slayengine.build/Debug/ALL_BUILD.build/: Script-800C2461EAE74C5DAD545FB7.sh  dgph
build_debug/slayengine.build/Debug/ZERO_CHECK.build/: Script-C102D856076D4993A82D7F17.sh  dgph
build_debug/slayengine.xcodeproj/: project.pbxproj
build_debug/slayengine.xcodeproj/xcshareddata/xcschemes/: slay.xcscheme
build_debug/src/: cmake_install.cmake
build_debug/src/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
build_debug/src/slay.xcodeproj/: project.pbxproj
build_debug/src/slayengine.build/Debug/slay.build/: dgph
build_debug/src/slayengine.build/Debug/slay.build/Objects-normal/x86_64/: Application.d  Base.d  Buffers.d  Camera.d  CameraDirector.d  CmdBuffer.d  Device.d  Font.d  Frustum.d  GameTexture.d  Image.d  Image.dia  InputHandlers.d  Math.d  Pipeline.d  Q3BspLoader.d  Q3BspMap.d  Q3BspPatch.d  Q3BspStatsUI.d  RenderContext.d  RenderContext.dia  StringHelpers.d  TextureManager.d  ThreadProcessor.d  Utils.d  Validation.d  VkMemAlloc.d  VkMemAlloc.dia  main.d  slay.LinkFileList
contrib/stb_image/: CMakeLists.txt
macOS/QuakeBspViewer.xcodeproj/: project.pbxproj
macOS/QuakeBspViewer.xcodeproj/xcshareddata/xcschemes/: QuakeBspViewer.xcscheme
metaltest/metaltest.xcodeproj/: project.pbxproj
src/: Application.cpp  CMakeLists.txt  ThreadProcessor.cpp  ThreadProcessor.hpp  main.cpp
src/q3bsp/: Q3BspMap.hpp
src/renderer/: RenderContext.cpp
(+8 files in other folders)
